# control_planning_ros

./: .gitignore  CMakeLists.txt  README.md  TODO  package.xml
config/: vehicle_dimension.yaml
include/: vehicle_dimensions.hpp
launch/: robot_state_publisher.launch.py  vehicle_info.launch.py
src/: global_path.cpp  occupancy_map.cpp
test/: vehicle_info.cpp
urdf/: robot_description.urdf
